--- a/output/tailwind.css
+++ b/output/tailwind.css
@@ -593,13 +593,6 @@ video {
   position: relative;
 }
 
-.inset-4 {
-  top: 1rem;
-  right: 1rem;
-  bottom: 1rem;
-  left: 1rem;
-}
-
 .inset-0 {
   top: 0px;
   right: 0px;
@@ -623,28 +616,28 @@ video {
   bottom: 2rem;
 }
 
-.top-0 {
-  top: 0px;
+.top-1\/2 {
+  top: 50%;
+}
+
+.-left-24 {
+  left: -6rem;
+}
+
+.-right-24 {
+  right: -6rem;
 }
 
 .z-50 {
   z-index: 50;
 }
 
-.-z-30 {
-  z-index: -30;
-}
-
-.-z-10 {
-  z-index: -10;
-}
-
 .z-40 {
   z-index: 40;
 }
 
-.z-30 {
-  z-index: 30;
+.-z-10 {
+  z-index: -10;
 }
 
 .col-start-1 {
@@ -668,6 +661,16 @@ video {
   margin-right: auto;
 }
 
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
+.my-12 {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
 .flex {
   display: flex;
 }
@@ -684,6 +687,14 @@ video {
   height: 2rem;
 }
 
+.h-6 {
+  height: 1.5rem;
+}
+
+.h-14 {
+  height: 3.5rem;
+}
+
 .w-48 {
   width: 12rem;
 }
@@ -696,6 +707,23 @@ video {
   width: 10rem;
 }
 
+.w-6 {
+  width: 1.5rem;
+}
+
+.w-14 {
+  width: 3.5rem;
+}
+
+.max-w-5xl {
+  max-width: 64rem;
+}
+
+.-translate-y-1\/2 {
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .grid-rows-1 {
   grid-template-rows: repeat(1, minmax(0, 1fr));
 }
@@ -704,28 +732,69 @@ video {
   flex-direction: column;
 }
 
-.place-items-end {
-  place-items: end;
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .place-items-center {
   place-items: center;
 }
 
+.items-start {
+  align-items: flex-start;
+}
+
 .items-center {
   align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 .justify-between {
   justify-content: space-between;
 }
 
+.justify-items-center {
+  justify-items: center;
+}
+
 .gap-4 {
   gap: 1rem;
 }
 
+.gap-12 {
+  gap: 3rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .rounded-sm {
   border-radius: 0.125rem;
+}
+
+.rounded {
+  border-radius: 0.25rem;
+}
+
+.rounded-full {
+  border-radius: 9999px;
+}
+
+.border-8 {
+  border-width: 8px;
+}
+
+.border-amber-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(251 191 36 / var(--tw-border-opacity));
 }
 
 .bg-white {
@@ -746,6 +815,24 @@ video {
   padding: 1.5rem;
 }
 
+.p-8 {
+  padding: 2rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .pt-16 {
   padding-top: 4rem;
 }
@@ -756,6 +843,15 @@ video {
 
 .text-center {
   text-align: center;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.font-bold {
+  font-weight: 700;
 }
 
 .text-neutral-900 {
@@ -808,6 +904,14 @@ video {
     width: 16rem;
   }
 
+  .md\:flex-1 {
+    flex: 1 1 0%;
+  }
+
+  .md\:justify-between {
+    justify-content: space-between;
+  }
+
   .md\:pt-24 {
     padding-top: 6rem;
   }
@@ -832,6 +936,10 @@ video {
 
   .lg\:mr-auto {
     margin-right: auto;
+  }
+
+  .lg\:block {
+    display: block;
   }
 
   .lg\:flex {
@@ -865,5 +973,15 @@ video {
 
   .lg\:pt-48 {
     padding-top: 12rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:-left-7 {
+    left: -1.75rem;
+  }
+
+  .xl\:-right-7 {
+    right: -1.75rem;
   }
 }
